# GateOpener

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  tests.yml
ci/backend/: Dockerfile  dev-requirements.txt  gunicorn_conf.py  requirements.txt  startup.sh
opener/: create_user.py  main.py
opener/internal/: auth.py  database.py  env.py  logic.py
opener/routes/: actions.py  auth.py
opener/static/: main.css
opener/templates/: index.html
test/: conftest.py
test/internal/: test_authentification.py
test/routes/: test_actions.py  test_auth.py  test_logic.py
